@@ -3,8 +3,8 @@
   Program:   gdcm
   Module:    $RCSfile: gdcmRLE.cxx,v $
   Language:  C++
-  Date:      $Date: 2004/09/27 08:39:07 $
-  Version:   $Revision: 1.23 $
+  Date:      $Date: 2004/10/06 22:31:31 $
+  Version:   $Revision: 1.24 $
                                                                                 
   Copyright (c) CREATIS (Centre de Recherche et d'Applications en Traitement de
   l'Image). All rights reserved. See Doc/License.txt or
@@ -32,96 +32,26 @@
  * @return    Boolean 
  */
 bool gdcmFile::gdcm_read_RLE_file (FILE* fp,void* image_buffer) {
-   long fragmentBegining; // for ftell, fseek
    char * im = (char *)image_buffer;
+   long uncompressedSegmentSize = Header->GetXSize() * Header->GetYSize();
+   
 
-   long RleSegmentLength[15],fragmentLength,uncompressedSegmentSize;;
-   long ftellRes, ln;
-   uint32_t nbRleSegments;
-   uint32_t RleSegmentOffsetTable[15];
-   uint16_t ItemTagGr,ItemTagEl;
-   uncompressedSegmentSize=Header->GetXSize()*Header->GetYSize();
-   ftellRes=ftell(fp);
-   // Basic Offset Table with Item Value
-      // Item Tag
-   fread(&ItemTagGr,2,1,fp);  // Reading (fffe):Basic Offset Table Item Tag Gr
-   fread(&ItemTagEl,2,1,fp);  // Reading (e000):Basic Offset Table Item Tag El
-   if(Header->GetSwapCode()) {
-      ItemTagGr=Header->SwapShort(ItemTagGr); 
-      ItemTagEl=Header->SwapShort(ItemTagEl);      
-   }
-      // Item Length
-   ftellRes=ftell(fp);
-   fread(&ln,4,1,fp); 
-   if(Header->GetSwapCode()) 
-      ln=Header->SwapLong(ln);    // Basic Offset Table Item Lentgh
-   if (ln != 0) {
-      // What is it used for ??
-      char * BasicOffsetTableItemValue= new char[ln+1];
-      fread(BasicOffsetTableItemValue,ln,1,fp); 
-      uint32_t a;
-      for (int i=0;i<ln;i+=4){
-         a=str2num(&BasicOffsetTableItemValue[i],uint32_t);
-      }        
+   // Loop on the frame[s]
+   for( gdcmRLEFramesInfo::RLEFrameList::iterator
+        it  = Header->RLEInfo.Frames.begin();
+        it != Header->RLEInfo.Frames.end();
+      ++it )
+   {
+       std::cout << "...new frame...\n ";
+      // Loop on the fragments
+      for( unsigned int k = 1; k <= (*it)->NumberFragments; k++ )
+      {
+         fseek( fp, (*it)->Offset[k] ,SEEK_SET);  
+         gdcm_read_RLE_fragment( &im, (*it)->Length[k],
+                                 uncompressedSegmentSize, fp );
+      }
    }
 
-   ftellRes=ftell(fp);
-   fread(&ItemTagGr,2,1,fp);  // Reading (fffe) : Item Tag Gr
-   fread(&ItemTagEl,2,1,fp);  // Reading (e000) : Item Tag El
-   if(Header->GetSwapCode()) {
-      ItemTagGr=Header->SwapShort(ItemTagGr); 
-      ItemTagEl=Header->SwapShort(ItemTagEl);      
-   }  
-
-   // while 'Sequence Delimiter Item' (fffe,e0dd) not found
-   while (  ( ItemTagGr == 0xfffe) && (ItemTagEl != 0xe0dd) ) { 
-   // Parse fragments of the current Fragment (Frame)    
-      ftellRes=ftell(fp);
-      fread(&fragmentLength,4,1,fp); 
-      if(Header->GetSwapCode()) 
-         fragmentLength=Header->SwapLong(fragmentLength);    // length
-
-          //------------------ scanning (not reading) fragment pixels
- 
-      fread(&nbRleSegments,4,1,fp);  // Reading : Number of RLE Segments        
-      if(Header->GetSwapCode()) 
-         nbRleSegments=Header->SwapLong(nbRleSegments);
- 
-      for(int k=1; k<=15; k++) { // Reading RLE Segments Offset Table
-         ftellRes=ftell(fp);
-         fread(&RleSegmentOffsetTable[k],4,1,fp);
-         if(Header->GetSwapCode())
-            RleSegmentOffsetTable[k]=Header->SwapLong(RleSegmentOffsetTable[k]);
-      }
-
-      if (nbRleSegments>1) { 
-         for(unsigned int k=1; k<=nbRleSegments-1; k++) { // reading RLE Segments
-            RleSegmentLength[k]=RleSegmentOffsetTable[k+1]-RleSegmentOffsetTable[k];
-            ftellRes=ftell(fp);
-            fragmentBegining=ftell(fp);   
-            gdcm_read_RLE_fragment (&im, RleSegmentLength[k],uncompressedSegmentSize,fp);
-            fseek(fp,fragmentBegining,SEEK_SET);  
-            fseek(fp,RleSegmentLength[k],SEEK_CUR);        
-         }
-      }
-      RleSegmentLength[nbRleSegments] = fragmentLength - RleSegmentOffsetTable[nbRleSegments];
-      ftellRes=ftell(fp);
-      fragmentBegining=ftell(fp);
-      gdcm_read_RLE_fragment (&im, RleSegmentLength[nbRleSegments],uncompressedSegmentSize, fp);
-      fseek(fp,fragmentBegining,SEEK_SET);  
-      fseek(fp,RleSegmentLength[nbRleSegments],SEEK_CUR);    
-      
-      // end of scanning fragment pixels       
-   
-      ftellRes=ftell(fp);
-      fread(&ItemTagGr,2,1,fp);  // Reading (fffe) : Item Tag Gr
-      fread(&ItemTagEl,2,1,fp);  // Reading (e000) : Item Tag El
-      if(Header->GetSwapCode()) {
-         ItemTagGr=Header->SwapShort(ItemTagGr); 
-         ItemTagEl=Header->SwapShort(ItemTagEl);      
-      }
-   } 
-   
    if (Header->GetBitsAllocated()==16) { // try to deal with RLE 16 Bits
    
       im = (char *)image_buffer;
@@ -154,14 +84,12 @@ bool gdcmFile::gdcm_read_RLE_file (FILE* fp,void* image_buffer) {
 int gdcmFile::gdcm_read_RLE_fragment(char** areaToRead, long lengthToDecode, 
                                      long uncompressedSegmentSize, FILE* fp) {
    (void)lengthToDecode; //FIXME
-   long ftellRes;
    int count;
    long numberOfOutputBytes=0;
    char n, car;
-   ftellRes =ftell(fp);
 
-   while(numberOfOutputBytes<uncompressedSegmentSize) {
-      ftellRes =ftell(fp);
+   while( numberOfOutputBytes < uncompressedSegmentSize )
+   {
       fread(&n,sizeof(char),1,fp);
       count=n;
       if (count >= 0 && count <= 127) {
